Fold in the composite repository TodoRepository into TodoService
Also made TodoEntity into an entity for jpa only and named it TodoJpaEntity